projects/spats/test/Adapter_Trimming/Negative/RRRY_1.fq
@1
GAACCGGACCGAAGCCCGATTTAATTGGATC
+
=<>>@@@<@@@@>>CEECC#5##########
@2
GAACCGGACCGAAGCCCGATTTAATTGGATC
+
=<>>@@@<@@@@>>CEECC#5##########
@3
GAACCGGACCGAAGCCCGATTTAATTGGATC
+
=<>>@@@<@@@@>>CEECC#5##########
@4
GAACCGGACCGAAGCCCGATTTAATTGGATA
+
=<>>@@@<@@@@>>CEECC#5##########
@5
GAACCGGACCGAAGCCCGATTTAATTAGATC
+
=<>>@@@<@@@@>>CEECC#5##########
@6
GAACCGGACCGAAGCCCGATTTAGATCGGAA
+
=<>>@@@<@@@@>>CEECC#5##########
@7
GAACCGGACCGAAGCCCGAGATCGGAAGAGC
+
=<>>@@@<@@@@>>CEECC#5##########
